--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
+    "file-saver": "^2.0.2",
     "node-sass": "^4.13.0",
     "parcel-bundler": "^1.12.4",
     "react": "^16.12.0",
