Updated range sliders, added analytics

--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
   },
   "homepage": "https://github.com/Stanko/neon#readme",
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "@material-ui/core": "^4.9.3",
     "file-saver": "^2.0.2",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "parcel-bundler": "^1.12.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "seedrandom": "^3.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7"
+    "@babel/core": "^7.8.4"
   }
 }
