--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
   "homepage": "https://github.com/Stanko/neon#readme",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
-    "@material-ui/core": "^4.9.3",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@material-ui/core": "^4.9.13",
+    "@types/react": "^16.9.34",
     "file-saver": "^2.0.2",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "parcel-bundler": "^1.12.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "seedrandom": "^3.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4"
+    "@babel/core": "^7.9.6"
   }
 }
