--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
-  "name": "neon",
+  "name": "fxhash-boilerplate-webpack",
   "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/index.html",
-    "build": "rm -rf dist && parcel build src/index.html"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Stanko/neon.git"
-  },
-  "author": "Stanko",
+  "description": "a boilerplate to create a generative token on fxhash",
+  "main": "index.js",
+  "author": "fxhash",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Stanko/neon/issues"
+  "scripts": {
+    "build": "webpack --config ./config/webpack.config.prod.js",
+    "start": "webpack serve --config ./config/webpack.config.dev.js"
   },
-  "homepage": "https://github.com/Stanko/neon#readme",
   "dependencies": {
     "@material-ui/core": "^4.9.13",
-    "@types/react": "^17.0.2",
     "file-saver": "^2.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "seedrandom": "^3.0.5"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "parcel": "^2.6.2",
-    "@babel/core": "^7.18.9",
-    "@parcel/transformer-sass": "^2.6.2",
-    "process": "^0.11.10"
+    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
+    "adm-zip": "^0.5.9",
+    "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.4.0",
+    "html-webpack-plugin": "^5.4.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.59.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1"
   }
 }
